Try to fix lhasa_main_panel vertical clipping

--- a/src/index.scss
+++ b/src/index.scss
@@ -58,8 +58,9 @@ $lhasa_font_size: 0.65rem;
 
 .lhasa_main_panel {
     flex: 1 1 auto;
-    min-height: 0;
+    min-height: 260px;
     overflow: hidden;
+    // overflow-y: auto;
 }
 
 .lhasa_editor.lhasa_dark_mode {
